--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">Quienes somos</h4>
+          <h4 class="text-white">Quiénes somos</h4>
           <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contactos</h4>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Siguenos en Twitter</a></li>
-            <li><a href="#" class="text-white">Siguenos en Facebook</a></li>
+            <li><a href="#" class="text-white">Síguenos en Twitter</a></li>
+            <li><a href="#" class="text-white">Síguenos en Facebook</a></li>
             <li><a href="#" class="text-white">Contacto</a></li>
           </ul>
         </div>
@@ -124,7 +124,7 @@
            <img src="https://www.lavanguardia.com/r/GODO/LV/p5/WebSite/2018/10/10/Recortada/img_npalou_20181010-130817_imagenes_lv_getty_gettyimages-902905182-kDk-U452288265652H0B-992x558@LaVanguardia-Web.jpg" class="card-img-top" alt="...">
             <div class="card-body">
             <h5 class="card-title">Lemur</h5>
-            <p class="card-text">Un animal muy tierno!!! cual es su hábitat?</p>
+            <p class="card-text">Un animal muy tierno!!! cuál es su hábitat?</p>
             <!-- Button trigger modal -->
                           <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal1">
                             + Información aquí
@@ -166,7 +166,7 @@
           <img src="https://gcdn.emol.cl/fotografia/files/2013/06/7703809850_239f446b6d_z.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Elefante</h5>
-            <p class="card-text">Chiquititio :) cual es su hábitat?</p>
+            <p class="card-text">Chiquitito :) cuál es su hábitat?</p>
             <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modal2">
                             + Información aquí
                           </button>
